added start and end hour inputs

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <label>Enter the Start Hour:&nbsp;&nbsp;</label><input type='text' id='startHour'><label>(Must be 1-24; Numbers only)</label>
+    </br></br>
+    <label>Enter the End Hour:&nbsp;&nbsp;</label><input type='text' id='endHour'><label>(Must be 1-24 & Greater than Start)</label>
     </header>
     <div id="schedContainer" class="container">
 
